--- a/index.html
+++ b/index.html
@@ -5,16 +5,60 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap, Font-Awesome CSS -->
+    <!-- Bootstrap, hover.css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     
+    <!-- Font-Awesome JS -->
+    <script src="https://kit.fontawesome.com/623db69bf7.js" crossorigin="anonymous"></script>
 
     <title>Tom Haysom</title>
   </head>
   <body>
-    <header></header>
+    <header>
+        <div class="row no-gutters header-row">
+            <a href="index.html" class="col-md-4 logo"></a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title no-gutters">
+                    <div class="col heading">
+                        <h1 class="name">Tom Haysom</h1>
+                        <h2 class="title">Full Stack Development Student</h2>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col">
+                        <ul id="nav" class="list-inline menu-container">
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menu-item">
+                                <a class="hvr-sink" href="index.html">
+                                    <i class="fas fa-home"></i>
+                                    <span>Home</span>
+                                </a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item">
+                                <a class="hvr-sink" href="resume.html">
+                                    <i class="far fa-file"></i>
+                                    <span>Resume</span>
+                                </a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item">
+                                <a class="hvr-sink" href="contact.html">
+                                    <i class="far fa-address-book"></i>
+                                    <span>Contact</span>
+                                </a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menu-item">
+                                <a class="hvr-sink" href="" target="_blank">
+                                    <i class="fas fa-download"></i>
+                                    <span>Download</span>
+                                </a>
+                            </li> 
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <section></section>
     <footer></footer>
     
