Finished CV page - added progress bars and timeline sections

--- a/index.html
+++ b/index.html
@@ -63,8 +63,59 @@
     </header>
     <section>
         <div class="container-fluid">
-            <div class="row row-table">
-                <!-- Three reasons column -->
+            <div class="row">
+                <!-- Personal info md-4 column -->
+                <div class="col col-md-4 order-last order-md-first color-personal-info bg-color-personal-info section-column">
+                    <!-- Personal info header row -->
+                    <div class="row">
+                        <div class="col">
+                            <h3 class="section-heading uppercase">Personal Info</h3>
+                        </div>
+                    </div>
+                    <!-- /Personal info header row -->
+                    <!-- Personal info item 1 -->
+                    <div class="personal-info-item">
+                        <div class="key">
+                        <p class="uppercase">Name:</p>
+                        </div>
+                        <div class="value">
+                        <p>Tom Haysom</p>
+                        </div>
+                    </div>
+                    <!-- /Personal info item 1 -->
+                    <!-- Personal info item 2 -->
+                    <div class="personal-info-item">
+                        <div class="key">
+                        <p class="uppercase">Locale:</p>
+                        </div>
+                        <div class="value">
+                        <p>Bucharest RO, South West UK, East Coast US and Remote</p>
+                        </div>
+                    </div>
+                    <!-- /Personal info item 2 -->
+                    <!-- Personal info item 3 -->
+                    <div class="personal-info-item">
+                        <div class="key">
+                        <p class="uppercase">Phone:</p>
+                        </div>
+                        <div class="value">
+                        <p>+40733344606</p>
+                        </div>
+                    </div>
+                    <!-- /Personal info item 3 -->
+                    <!-- Personal info item 4 -->
+                    <div class="personal-info-item">
+                        <div class="key">
+                        <p class="uppercase">Email:</p>
+                        </div>
+                        <div class="value">
+                        <p>thaysom22@gmail.com</p>
+                        </div>
+                    </div>
+                    <!-- /Personal info item 4 -->
+                </div>
+                <!-- /Personal info md-4 column -->
+                <!-- Three reasons md-8 column -->
                 <div class="col-md-8 bg-color-three-reasons section-column">
                     <!-- Header row for three reasons -->
                     <div class="row">
@@ -73,17 +124,66 @@
                         </div>
                     </div>
                     <!-- /Header row for three reasons -->
+                    <!-- Reasons to hire me row -->
                     <div class="row">
+                        <!-- Reason to hire me 1 -->
                         <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
                                 </div>
+                                <div class="col-10">
+                                    <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                    <p>
+                                        I am a rapidly improving Full Stack Development student with
+                                        professional Math teaching experience and strong analytical  
+                                        skills.
+                                    </p>
+                                </div>
                             </div>
                         </div>
+                        <!-- /Reason to hire me 1 -->
+                        <!-- Reason to hire me 2 -->
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                            <div class="row">
+                                <div class="col-2">
+                                    <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                                </div>
+                                <div class="col-10">
+                                    <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                    <p>
+                                        I am a dedicated and intrinsically motivated learner. 
+                                        I write Python scripts to solve real-world problems.
+                                        I combine my technical knowledge and statistical literacy with
+                                        emotional intelligence achieve results.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /Reason to hire me 2 -->
+                        <!-- Reason to hire me 3 -->
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                            <div class="row">
+                                <div class="col-2">
+                                    <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                                </div>
+                                <div class="col-10">
+                                    <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                    <p>
+                                        I thrive in a bright, enthusiastic team and am capable of 
+                                        learning new technologies and practices quickly. I am an 
+                                        excellent communicator - I will bring new ideas and add 
+                                        value to your team and products.  
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /Reason to hire me 3 -->
                     </div>
+                    <!-- /Reasons to hire me row -->
+                    
                 </div>
-                <!-- /Three reasons column -->
+                <!-- /Three reasons md-8 column -->
             </div>
         </div>
     
