--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,35 @@
         </div>
     </header>
     <section>
+        <div class="container-fluid">
+            <div class="row bg-color-contact">
+                <div class="col">
+                    <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
+                    <h5 class="uppercase text-center">Let's work together!</h5>
+                    <!-- Contact form -->
+                    <div class="center-form">
+                        <form>
+                            <input type="text" name="name" id="fullname" class="form-control" placeholder="Name"
+                            required>
+                            <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email"
+                            required>
+                            <textarea name="projectsummary" id="projectsummary" rows="5" class="form-control"
+                            placeholder="Project description..."></textarea>
+                            <!-- Form submit button -->
+                            <div class="form-row text-center">
+                                <div class="col">
+                                    <button type="submit" class="btn btn-secondary hvr-grow">
+                                        Send Project Request
+                                    </button>
+                                </div>
+                            </div>
+                            <!-- ./Form submit button -->
+                        </form>
+                    </div>
+                    <!-- ./Contact form -->
+                </div>
+            </div>
+        </div>
     
     </section>
     
