Finished contact form. Added CV download. Added href to links. Styled all text to Roberto by defualt.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 </a>
                             </li>
                             <li class="col-3 list-inline-item ui-menu-color-resume menu-item">
-                                <a class="hvr-sink hover-orange" href="resume.html">
+                                <a class="hvr-sink hover-orange" href="cv.html">
                                     <i class="far fa-file"></i>
                                     <span class="general-sub">CV</span>
                                 </a>
@@ -48,7 +48,7 @@
                                 </a>
                             </li>
                             <li class="col-3 list-inline-item ui-menu-color-download menu-item">
-                                <a class="hvr-sink hover-orange" href="" target="_blank">
+                                <a class="hvr-sink hover-orange" href="assets/cv/CV.pdf" target="_blank">
                                     <i class="fas fa-download" aria-hidden="true"></i>
                                     <span class="general-sub">Download</span>
                                 </a>
@@ -204,7 +204,7 @@
                 <p class="inline-block">
                     Need a printable version of my CV?
                     <br>
-                    <a class="cv-pdf hvr-sink hover-orange footer-link" href="" target="_blank">
+                    <a class="cv-pdf hvr-sink hover-orange footer-link" href="assets/cv/CV.pdf" target="_blank">
                         <span>Download PDF here</span>
                         <i class="fas fa-download footer-icon" aria-hidden="true"></i>
                     </a>                
@@ -214,14 +214,14 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a class="hvr-sink hover-orange footer-link" href="" target="_blank">
+                        <a class="hvr-sink hover-orange footer-link" href="https://www.linkedin.com/in/thomas-haysom-a89b7b58/" target="_blank">
                             <span>LinkedIn</span>
                             <i class="fa fa-linkedin footer-icon" aria-hidden="true"></i>
                             
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="hvr-sink hover-orange footer-link" href="" target="_blank">
+                        <a class="hvr-sink hover-orange footer-link" href="https://github.com/thaysom22" target="_blank">
                             <span>GitHub</span>
                             <i class="fa fa-github footer-icon" aria-hidden="true"></i>
                             
